[metadata]
name = gazebo_yarp_synchronizer
description = Synchronization between Python and Gazebo Classic via YARP.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = MIT
platforms = any
url = https://github.com/diegoferigo/gazebo-synchronizer

project_urls =
    Changelog = https://github.com/diegoferigo/gazebo-synchronizer/releases
    Tracker = https://github.com/diegoferigo/gazebo-synchronizer/issues
    Source = https://github.com/diegoferigo/gazebo-synchronizer

keywords =
    gazebo
    gazebo classic
    simulator
    simulations
    robot
    robotics
    yarp
    plugins
    synchronization
    thrift
    idl
    clock

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Framework :: Robot Framework
    Topic :: Games/Entertainment :: Simulation
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.7
